[gd_scene load_steps=9 format=2]

[ext_resource path="res://Doorways/Entrance.tscn" type="PackedScene" id=2]
[ext_resource path="res://Doorways/Exit.tscn" type="PackedScene" id=3]
[ext_resource path="res://World/CountDown.tscn" type="PackedScene" id=4]
[ext_resource path="res://World.gd" type="Script" id=5]
[ext_resource path="res://Images/SimpleTileset.png" type="Texture" id=6]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="TileSet" id=3]
0/name = "SimpleTileset.png 0"
0/texture = ExtResource( 6 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 64, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[node name="LevelBase" type="Node2D"]
position = Vector2( -2, -3 )
script = ExtResource( 5 )
__meta__ = {
"_edit_vertical_guides_": [ -19.1198 ]
}

[node name="PauseAfterTimeout" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="PauseAfterRewind" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="CountDown" parent="." instance=ExtResource( 4 )]
position = Vector2( 511.597, 39 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 3 )
cell_size = Vector2( 32, 32 )
collision_layer = 2
collision_mask = 0
format = 1
tile_data = PoolIntArray( 917510, 0, 0, 917511, 0, 0, 917532, 0, 0, 983046, 0, 0, 983047, 0, 0, 983062, 0, 0, 983063, 0, 0, 983068, 0, 0, 1048582, 0, 0, 1048583, 0, 0, 1048584, 0, 0, 1048585, 0, 0, 1048586, 0, 0, 1048587, 0, 0, 1048588, 0, 0, 1048589, 0, 0, 1048590, 0, 0, 1048591, 0, 0, 1048592, 0, 0, 1048593, 0, 0, 1048594, 0, 0, 1048595, 0, 0, 1048596, 0, 0, 1048597, 0, 0, 1048598, 0, 0, 1048599, 0, 0, 1048600, 0, 0, 1048601, 0, 0, 1048602, 0, 0, 1048603, 0, 0, 1048604, 0, 0 )

[node name="Entrances" type="Node2D" parent="."]

[node name="0" parent="Entrances" instance=ExtResource( 2 )]
position = Vector2( 724.812, 414.9 )

[node name="Exits" type="Node2D" parent="."]

[node name="0" parent="Exits" instance=ExtResource( 3 )]
position = Vector2( 369.35, 386.5 )
[connection signal="timeout" from="PauseAfterTimeout" to="." method="_on_PauseAfterTimeout_timeout"]
[connection signal="timeout" from="PauseAfterRewind" to="." method="_on_PauseAfterRewind_timeout"]
[connection signal="new_time" from="CountDown" to="." method="_on_CountDown_new_time"]
[connection signal="time_reset" from="CountDown" to="." method="_on_CountDown_time_reset"]
[connection signal="timeout" from="CountDown" to="." method="_on_CountDown_timeout"]
